--- a/index.html
+++ b/index.html
@@ -21,22 +21,25 @@
 
     <header class="page-header">
         <div class="container">
-            <nav class="nav ">
-                <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
-                        class="logo-right">Studio</span> </a>
+            <div class="flex-container">
+                <nav class="nav ">
+                    <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
+                            class="logo-right">Studio</span> </a>
 
-                <ul class="nav list">
-                    <li> <a href="./index.html" class="nav-link curent">Студія</a></li>
-                    <li> <a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-                    <li> <a href="#" class="nav-link">Контакти</a></li>
-                </ul>
-            </nav>
-            <address class="address">
-                <ul class="list">
-                    <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
-                </ul>
-            </address>
+                    <ul class="nav list">
+                        <li> <a href="./index.html" class="nav-link curent">Студія</a></li>
+                        <li> <a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+                        <li> <a href="#" class="nav-link">Контакти</a></li>
+                    </ul>
+                </nav>
+                <address class="address">
+                    <ul class="list">
+                        <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
+                        <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
+                    </ul>
+                </address>
+            </div>
+
         </div>
 
 
@@ -89,11 +92,11 @@
                     <li class="work-item"><img class="work-img" src="./images/index/laptop.webp" alt="ноутбук"
                             width="370" height="294">
                     </li>
-                    <li><img class="work-img" src="./images/index/palitra.webp" alt="палітра на планшеті" width="370"
-                            height="294">
+                    <li class="work-item"><img class="work-img" src="./images/index/palitra.webp"
+                            alt="палітра на планшеті" width="370" height="294">
                     </li>
-                    <li><img class="work-img" src="./images/index/keyboard-on-table.webp" alt="клавіатура на столі"
-                            width="370" height="294">
+                    <li class="work-item"><img class="work-img" src="./images/index/keyboard-on-table.webp"
+                            alt="клавіатура на столі" width="370" height="294">
                     </li>
                 </ul>
             </div>
