--- a/portfolio.html
+++ b/portfolio.html
@@ -18,24 +18,28 @@
 <body class="page">
     <header class="page-header">
         <div class="container">
-            <nav>
-                <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
-                        class="logo-right">Studio</span>
-                </a>
+            <div class="flex-container">
+                <nav class="nav ">
+                    <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
+                            class="logo-right">Studio</span> </a>
 
-                <ul class="nav list">
-                    <li> <a href="./index.html" class="nav-link">Студія</a></li>
-                    <li> <a href="./portfolio.html" class="nav-link curent">Портфоліо</a></li>
-                    <li> <a href="#" class="nav-link">Контакти</a></li>
-                </ul>
-            </nav>
-            <address>
-                <ul class="list">
-                    <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
-                </ul>
-            </address>
+                    <ul class="nav list">
+                        <li> <a href="./index.html" class="nav-link curent">Студія</a></li>
+                        <li> <a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+                        <li> <a href="#" class="nav-link">Контакти</a></li>
+                    </ul>
+                </nav>
+                <address class="address">
+                    <ul class="list">
+                        <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
+                        <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
+                    </ul>
+                </address>
+            </div>
+
         </div>
+
+
     </header>
 
 
