--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,16 @@
                             class="logo-right">Studio</span> </a>
 
                     <ul class="nav list">
-                        <li> <a href="./index.html" class="nav-link curent">Студія</a></li>
-                        <li> <a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+                        <li> <a href="./index.html" class="nav-link ">Студія</a></li>
+                        <li> <a href="./portfolio.html" class="nav-link curent">Портфоліо</a></li>
                         <li> <a href="#" class="nav-link">Контакти</a></li>
                     </ul>
                 </nav>
                 <address class="address">
                     <ul class="list">
-                        <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
                         <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
+                        <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
+
                     </ul>
                 </address>
             </div>
@@ -46,7 +47,7 @@
     <main>
         <section class="portfolio">
             <div class="container">
-                <ul class="list">
+                <ul class="list button-list">
                     <li><button type="button">Всі</button></li>
                     <li><button type="button">Веб-сайти</button></li>
                     <li><button type="button">Додатки</button></li>
