added calc function in all project

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section class="section work">
             <div class="container">
                 <h2 class="section-title work-title">Чим ми займаємось</h2>
-                <ul class="list wraper">
+                <ul class="list wraper work-list">
                     <li class="work-item"><img class="work-img" src="./images/index/laptop.webp" alt="ноутбук"
                             width="370" height="294">
                     </li>
@@ -106,7 +106,7 @@
         <section class="section staff">
             <div class="container">
                 <h2 class="section-title staff-title">Наша команда</h2>
-                <ul class="list wraper">
+                <ul class="staff-list list wraper">
                     <li class="staff-card">
                         <img class="staff-img" src="./images/index/igor.webp" alt="igor" width="270" height="260">
                         <h3 class="section-title staff-subtitle">Ігор Дем'яненко</h3>
