--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="page">
 
-    <div class="wraper">
+    <div class="wrapper">
         <header class="page-header">
             <div class="container">
                 <div class="flex-container">
@@ -53,7 +53,7 @@
                 <h1 class="hero-title">Ефективні рішення <br /> для вашого бізнесу</h1>
                 <button type="button" class="hero-btn">Замовити послугу</button>
             </section>
-            <section class="section benefits">
+            <section class="section-benefits">
                 <div class="container">
                     <ul class="list">
                         <li>
@@ -89,7 +89,7 @@
 
             </section>
 
-            <section class="section work">
+            <section class="section-work">
                 <div class="container">
                     <h2 class="section-title work-title">Чим ми займаємось</h2>
                     <ul class="list work-list">
@@ -106,7 +106,7 @@
                 </div>
             </section>
 
-            <section class="section staff">
+            <section class="section-staff">
                 <div class="container">
                     <h2 class="section-title staff-title">Наша команда</h2>
                     <ul class="staff-list list">
