--- a/index.html
+++ b/index.html
@@ -147,9 +147,13 @@
                 <a href="#" class="footer-logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
                 <address>
                     <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-                    <ul class="list">
-                        <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
-                        <li><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    <ul class="list contacts-list">
+                        <li class="contacts-item"><a class="footer-contacts"
+                                href="mailto:info@example.com">info@example.com</a></li>
+                        <li class="contacts-item"><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11
+                                11</a></li>
+
+
                     </ul>
                 </address>
             </div>
