--- a/portfolio.html
+++ b/portfolio.html
@@ -59,74 +59,92 @@
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/technocrack.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Технокряк</h2>
-                                <p class="section-text galery-text">Веб-сайт</p>
-                                <!-- <p></p> -->
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Технокряк</h2>
+                                    <p class="section-text galery-text">Веб-сайт</p>
+                                    <!-- <p></p> -->
+                                </div>
                             </a>
                         </li>
 
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/neworlean.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="section-text galery-text">Дизайн</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Постер New Orlean vs Golden Star</h2>
+                                    <p class="section-text galery-text">Дизайн</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/seafood.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Ресторан Seafood</h2>
-                                <p class="section-text galery-text">Застосунок</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Ресторан Seafood</h2>
+                                    <p class="section-text galery-text">Застосунок</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/headfones.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Проет Prime</h2>
-                                <p class="section-text galery-text">Маркетинг</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Проет Prime</h2>
+                                    <p class="section-text galery-text">Маркетинг</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/boxes.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Проект Boxes</h2>
-                                <p class="section-text galery-text">Застосунок</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Проект Boxes</h2>
+                                    <p class="section-text galery-text">Застосунок</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/monitor.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Inspiration has no Borders</h2>
-                                <p class="section-text galery-text">Веб-сайт</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Inspiration has no Borders</h2>
+                                    <p class="section-text galery-text">Веб-сайт</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/magazine.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Видання Limited Edition</h2>
-                                <p class="section-text galery-text">Дизайн</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Видання Limited Edition</h2>
+                                    <p class="section-text galery-text">Дизайн</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/tag.webp" alt="" width="370"
                                     height="294">
-                                <h2 class="section-title galery-title">Проект LAB</h2>
-                                <p class="section-text galery-text">Маркетинг</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Проект LAB</h2>
+                                    <p class="section-text galery-text">Маркетинг</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
                         <li class="portfolio-item">
                             <a class="portfolio-link" href=""><img src="./images/portfolio/growingbisiness.webp" alt=""
                                     width="370" height="294">
-                                <h2 class="section-title galery-title">Growing Business</h2>
-                                <p class="section-text galery-text">Застосунок</p>
-                                <p></p>
+                                <div class="card-content">
+                                    <h2 class="section-title galery-title">Growing Business</h2>
+                                    <p class="section-text galery-text">Застосунок</p>
+                                    <p></p>
+                                </div>
                             </a>
                         </li>
 
