add alternative text to images on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
                     </ul>
                     <ul class="list">
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/technocrack.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/technocrack.webp"
+                                    alt="Проект технокряк" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Технокряк</h2>
                                     <p class="section-text galery-text">Веб-сайт</p>
@@ -68,8 +68,8 @@
                         </li>
 
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/neworlean.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/neworlean.webp"
+                                    alt="постер New Orlean" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Постер New Orlean vs Golden Star</h2>
                                     <p class="section-text galery-text">Дизайн</p>
@@ -78,8 +78,8 @@
                             </a>
                         </li>
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/seafood.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/seafood.webp"
+                                    alt="логотип ресторана sea food" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Ресторан Seafood</h2>
                                     <p class="section-text galery-text">Застосунок</p>
@@ -88,8 +88,8 @@
                             </a>
                         </li>
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/headfones.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/headfones.webp"
+                                    alt=" зображення навушників" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Проет Prime</h2>
                                     <p class="section-text galery-text">Маркетинг</p>
@@ -98,8 +98,8 @@
                             </a>
                         </li>
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/boxes.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/boxes.webp"
+                                    alt="зображення коробок" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Проект Boxes</h2>
                                     <p class="section-text galery-text">Застосунок</p>
@@ -108,8 +108,8 @@
                             </a>
                         </li>
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/monitor.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/monitor.webp"
+                                    alt=" зображення монітору" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Inspiration has no Borders</h2>
                                     <p class="section-text galery-text">Веб-сайт</p>
@@ -118,8 +118,8 @@
                             </a>
                         </li>
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/magazine.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/magazine.webp"
+                                    alt="зображення розгорнутого журналу" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Видання Limited Edition</h2>
                                     <p class="section-text galery-text">Дизайн</p>
@@ -128,8 +128,8 @@
                             </a>
                         </li>
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/tag.webp" alt="" width="370"
-                                    height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/tag.webp"
+                                    alt="зображення бірки" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Проект LAB</h2>
                                     <p class="section-text galery-text">Маркетинг</p>
@@ -138,8 +138,8 @@
                             </a>
                         </li>
                         <li class="portfolio-item">
-                            <a class="portfolio-link" href=""><img src="./images/portfolio/growingbisiness.webp" alt=""
-                                    width="370" height="294">
+                            <a class="portfolio-link" href=""><img src="./images/portfolio/growingbisiness.webp"
+                                    alt="ноутбук на столі" width="370" height="294">
                                 <div class="card-content">
                                     <h2 class="section-title galery-title">Growing Business</h2>
                                     <p class="section-text galery-text">Застосунок</p>
